--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,13 @@ dependencies:
   percent_indicator: ^4.2.3
   curved_navigation_bar: ^1.0.3
   http: ^1.2.0
+  lottie: ^3.0.0
+  iconsax_flutter: ^1.0.0
+  connectivity_plus: ^5.0.2
 
+
+  fluttertoast: ^8.2.4
+  cached_network_image: ^3.3.1
 
 
 
@@ -70,5 +76,6 @@ flutter:
   assets:
     - assets/images/
     - assets/logo/
+    - assets/animation/
     - assets/images/welcome_images/
     - assets/images/forget_password/
